# AutoGPT-scripts

./: loadDocument.py  pyproject.toml
