[tool.poetry]
name = "autogpt"
version = "0.1.0"
description = ""
authors = ["Leo <leosungun@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.268"
openai = "^0.27.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
